# multiple-api-aggregator

./: .gitignore  README.md  pyproject.toml
aggregator/: __init__.py
aggregator/adapters/: __init__.py  base.py
aggregator/circuit_breaker/: __init__.py  breaker.py
aggregator/common/: __init__.py  config.py  exceptions.py  types.py
aggregator/metrics/: __init__.py  collector.py
aggregator/mock_apis/: __init__.py  mocks.py
aggregator/orchestrator/: __init__.py  orchestrator.py
aggregator/priority_queue/: __init__.py  queue.py
aggregator/rate_limiter/: __init__.py  shared_pool.py  token_bucket.py
aggregator/retry/: __init__.py  policy.py
aggregator/scheduler/: __init__.py  scheduler.py
aggregator/throttler/: __init__.py  adaptive.py
docs/: ARCHITECTURE.md
examples/: demo.py
tests/: conftest.py  test_adaptive_throttler.py  test_circuit_breaker.py  test_integration.py  test_priority_queue.py  test_retry_policy.py  test_shared_pool.py  test_token_bucket.py
